# ZWG_Terminal

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FINDINGS-IME-Snippet.md  FINDINGS-delegate-review.md  FINDINGS-perf-bottleneck.md  FINDINGS-repeated-string-bug.md  FINDINGS-tab-perf.md  FINDINGS-titlebar-drag.md  FINDINGS.md  HANDOFF.md  README.md  SKILL.md  plan.md
.cargo/: config.toml
.claude/: settings.local.json
.claude/commands/: grok-x.md  note-write.md  x-trend-ideas.md
crates/ghostty-vt/: Cargo.toml
crates/ghostty-vt-sys/: Cargo.toml  build.rs
crates/ghostty-vt-sys/include/: ghostty_vt.h
crates/ghostty-vt-sys/src/: lib.rs
crates/ghostty-vt-sys/zig/: async_io.zig  build.zig  build.zig.zon  content_scan.zig  dx12.zig  gpu_renderer.zig  lib.zig  shaders.zig  vk.zig  vulkan_renderer.zig
crates/ghostty-vt-sys/zig/shaders/: terminal.frag  terminal.frag.spv  terminal.vert  terminal.vert.spv
crates/ghostty-vt/src/: lib.rs
crates/zwg-app/: Cargo.toml  build.rs
crates/zwg-app/src/: ai.rs  app.rs  cli.rs  clipboard_monitor.rs  main.rs  snippet_palette.rs  template_editor.rs  text_input.rs  wasm_runtime.rs
crates/zwg-app/src/config/: mod.rs
crates/zwg-app/src/ipc/: bridge.rs  mod.rs
crates/zwg-app/src/shell/: mod.rs
crates/zwg-app/src/snippets/: mod.rs  settings.rs  store.rs  view.rs
crates/zwg-app/src/split/: mod.rs
crates/zwg-app/src/terminal/: gpu_view.rs  grid_renderer.rs  mod.rs  native_gpu_presenter.rs  pty.rs  simd_ops.rs  surface.rs  view.rs  vt_parser.rs  win32_input.rs
crates/zwg-intelligence/: Cargo.toml
crates/zwg-intelligence/src/: burn_backend.rs  classifier.rs  clipboard.rs  context_manager.rs  device.rs  embeddings.rs  fast_io.rs  flash_attention.rs  input_accel.rs  kv_cache.rs  kv_quantizer.rs  lib.rs  model_manager.rs  multi_nic.rs  nvfp4.rs  ollama_client.rs  paged_attention.rs  parallel_decode.rs  predictor.rs  ramdisk.rs  render_accel.rs  runtime.rs  semantic_index.rs  sliding_window.rs  speculative_decoder.rs  summarizer.rs
docs/superpowers/specs/: 2026-04-05-vcc-viewer-design.md
installer/: ZWG_Terminal_Setup.spec  build_installer.py  zwg_installer.py  zwg_uninstaller.py
mojo-accel/: Makefile  README.md  async_io_simd.mojo  flash_attention_simd.mojo  grid_accel.mojo  kv_quantizer_simd.mojo  paged_attention_simd.mojo  vt_parser_simd.mojo
packaging/windows/: AppxManifest.xml  Build-MSIX.ps1  New-CodeSigningCert.ps1
packaging/winget/manifests/s/sayasaya8039/ZWGTerminal/1.1.2/: sayasaya8039.ZWGTerminal.installer.yaml  sayasaya8039.ZWGTerminal.locale.ja-JP.yaml  sayasaya8039.ZWGTerminal.yaml
