[workspace]
resolver = "2"
members = [
    "crates/zwg-app",
    "crates/ghostty-vt",
    "crates/ghostty-vt-sys",
]

[workspace.package]
version = "1.0.1"
edition = "2024"
authors = ["ZWG Terminal contributors"]
license = "MIT"

[workspace.dependencies]
gpui = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
parking_lot = "0.12"
flume = "0.11"
smallvec = { version = "1", features = ["union"] }
libc = "0.2"
mimalloc = { version = "0.1", default-features = false }
unicode-width = "0.2"

[workspace.dependencies.windows]
version = "0.61"
features = [
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = false
debug = false
incremental = false

[profile.release.build-override]
opt-level = 0

[profile.dev]
opt-level = 1
