[workspace]
resolver = "2"
members = [
    "crates/zwg-app",
    "crates/zwg-intelligence",
    "crates/ghostty-vt",
    "crates/ghostty-vt-sys",
]
exclude = ["conpty_test"]

[workspace.package]
version = "1.3.4"
edition = "2024"
authors = ["ZWG Terminal contributors"]
license = "MIT"

[workspace.dependencies]
gpui = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = { version = "0.4", features = ["release_max_level_debug"] }
env_logger = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
parking_lot = "0.12"
flume = "0.11"
smallvec = { version = "1", features = ["union"] }
libc = "0.2"
mimalloc = { version = "0.1", default-features = false }
unicode-width = "0.2"
ort = { version = "2.0.0-rc.12", features = ["directml"] }

[workspace.dependencies.windows]
version = "0.61"
features = [
    "Win32_System_Console",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_UI_Shell",
    "Win32_UI_Input_Ime",
]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
debug = false
incremental = false

[profile.release.build-override]
opt-level = 0

[profile.dev]
opt-level = 1
