[package]
name = "zwg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
default-run = "zwg"

[[bin]]
name = "zwg"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
uuid.workspace = true
dirs.workspace = true
parking_lot.workspace = true
flume.workspace = true
smallvec.workspace = true
mimalloc.workspace = true
windows.workspace = true
libc.workspace = true
unicode-width.workspace = true
raw-window-handle = "0.6"
image = "0.25"
encoding_rs = "0.8"
rfd = "0.15"
ureq = { version = "2.12", features = ["json"] }
wasmi = { version = "2.0.0-beta.2", default-features = true }
unicode-segmentation = "1.12"
ghostty-vt = { path = "../ghostty-vt", optional = true }
zwg-intelligence = { path = "../zwg-intelligence", optional = true }

[build-dependencies]
cc = "1"
winresource = "0.1"

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }

[features]
default = ["ghostty_vt", "intelligence"]
ghostty_vt = ["dep:ghostty-vt"]
intelligence = ["dep:zwg-intelligence"]
